--- a/frontend/src/styles/AdminDashboard.css
+++ b/frontend/src/styles/AdminDashboard.css
@@ -27,6 +27,11 @@
   box-shadow: 0 2px 6px rgba(0,0,0,0.05);
   text-align: center;
 }
+.dashboard-card:hover{
+  background-color: #f8f8fb;
+  transform: translateY(-4px);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
 
 /* Card label */
 .card-label {
