--- a/frontend/src/styles/Welcome.css
+++ b/frontend/src/styles/Welcome.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     backdrop-filter: blur(5px); /* Blur the background */
   }
-  
+  /* welcome message */
   .welcome-message {
     font-size: 3rem;
     font-family: 'Dancing Script', cursive;  /* Calligraphy font */
