--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -438,13 +438,15 @@
   }
 
   .search-btn {
-    background: #f9d5d3;
+    background: #eee9e8;
     border: 1px solid #ccc;
     border-left: none;
     padding: 8px 12px;
     border-radius: 0 4px 4px 0;
     cursor: pointer;
     font-size: 1.1rem;
+    width:40px;
+    margin-bottom: 20px;
   }
 
   .search-btn:hover {
