--- a/frontend/src/styles/RegisterModal.css
+++ b/frontend/src/styles/RegisterModal.css
@@ -60,7 +60,7 @@
   display: flex;
   justify-content: space-around;
   gap: 1rem;
-  margin: 0.8rem 0;
+  max-height: 50px;
 }
 
 .Register-Form .gender-group label {
@@ -70,7 +70,9 @@
   font-size: 0.95rem;
   color: #333;
   cursor: pointer;
+  margin-bottom: 40px;
 }
+
 
 /* Button */
 .Register-Form button {
